@@ -1,7 +1,7 @@
 #/*! \page config_macros Default configuration: @RPMCONFIGDIR@/macros
 # \verbatim
 #
-# $Id: macros.in,v 1.129 2002/12/09 17:22:55 jbj Exp $
+# $Id: macros.in,v 1.130 2002/12/12 19:21:50 jbj Exp $
 #
 # This is a global RPM configuration file. All changes made here will
 # be lost when the rpm package is upgraded. Any per-system configuration
@@ -116,16 +116,18 @@
 
 #	Template for debug information sub-package.
 %debug_package \
+%ifnarch noarch\
 %global __debug_package 1\
-%package debug \
-Summary: Debug information for package %{name} \
-Group: Development/Debug \
-%description debug \
-This package provides debug information for package %{name}. \
-Debug information is useful when developing applications that use this \
-package or when debugging this package. \
-%files debug -f debugfiles.list \
-%defattr(-,root,root)  \
+%package debug\
+Summary: Debug information for package %{name}\
+Group: Development/Debug\
+%description debug\
+This package provides debug information for package %{name}.\
+Debug information is useful when developing applications that use this\
+package or when debugging this package.\
+%files debug -f debugfiles.list\
+%defattr(-,root,root)\
+%endif\
 %{nil}
 
 %_defaultdocdir		%{_usr}/doc
